assets/css/main.css
/* ... */
  .box.features .features-row {
    border-top: solid 2px #e5e5e5;
    position: relative; }
    .box.features .features-row:after {
      clear: both;
      content: '';
      display: block; }
    .box.features .features-row section {
      float: left;
      padding: 3em;
      width: 50%; }
      .box.features .features-row section :last-child {
        margin-bottom: 0; }
      .box.features .features-row section:nth-child(2n) {
        padding-right: 0; }
        .box.features .features-row section:nth-child(2n):before {
          background: #e5e5e5;
          content: '';
          display: block;
          height: 100%;
          margin-left: -3em;
          position: absolute;
          top: 0;
          width: 2px; }
      .box.features .features-row section:nth-child(2n-1) {
        padding-left: 0; }
    .box.features .features-row:first-child {
      border-top: 0; }
      .box.features .features-row:first-child section {
        padding-top: 0; }
    .box.features .features-row:last-child {
      padding-bottom: 0; }
      .box.features .features-row:last-child section {
        padding-bottom: 0; }
  .box.special {
    text-align: center; }
  .box .image.featured {
    border-radius: 0;
    display: block;
    margin: 3em 0 3em -3em;
    position: relative;
    width: calc(100% + 6em); }
    .box .image.featured img {
      border-radius: 0;
      display: block;
      width: 100%; }
    .box .image.featured:first-child {
      border-radius: 6px 6px 0 0;
      margin-bottom: 3em;
      margin-top: -3em; }
      .box .image.featured:first-child img {
        border-radius: 6px 6px 0 0; }
    .box .image.featured:last-child {
      border-radius: 0 0 6px 6px;
      margin-bottom: -3em;
      margin-top: 3em; }
      .box .image.featured:last-child img {
        border-radius: 0 0 6px 6px; }

/* Icon */
.icon {
  text-decoration: none;
  border-bottom: none;
  position: relative; }
  .icon:before {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-transform: none !important; }
  .icon > .label {
    display: none; }
  .icon.major {
    background: #666;
    border-radius: 100%;
    color: #ffffff;
    cursor: default;
    display: inline-block;
    height: 5.5em;
    line-height: 5.5em;
    margin: 0 0 2em 0;
    width: 5.5em; }
    .icon.major:before {
      font-size: 2.5em; }
    .icon.major.accent1 {
      background: #666;
      color: #ffffff; }
    .icon.major.accent2 {
      background: #e89980;
      color: #ffffff; }
    .icon.major.accent3 {
      background: #7fcdb8;
      color: #ffffff; }
    .icon.major.accent4 {
      background: #90b0ba;
      color: #ffffff; }
    .icon.major.accent5 {
      background: #e5cb95;
      color: #ffffff; }

/* Image */
.image {
  border-radius: 6px;
  border: 0;
  display: inline-block;
  position: relative; }
  .image img {
    border-radius: 6px;
    display: block; }
  .image.left {
    float: left;
    padding: 0 1.5em 1em 0;
    top: 0.25em; }
  .image.right {
    float: right;
    padding: 0 0 1em 1.5em;
    top: 0.25em; }
  .image.fit {
    display: block;
    margin: 0 0 2em 0;
    width: 100%; }
    .image.fit img {
      display: block;
      width: 100%; }

/* Feature */
.feature {
  position: relative;
  height: 20em; }
  .feature:after {
    clear: both;
    content: '';
    display: block; }
  .feature h3, .feature h4, .feature h5, .feature h6 {
    text-align: inherit; }
  .feature p {
    margin: 0 0 0.5em 0;
    text-align: justify; }
  .feature .image {
    display: inline-block;
    overflow: hidden;
    position: relative;
    width: 50%;
    height: auto; }
    .feature .image img {
      display: block;
      min-height: 100%;
      min-width: 100%;
      position: absolute; }
  .feature:before {
    background: blue;
    content: '';
    display: inline-block;
    height: 100%;
    vertical-align: middle; }
  .feature .content {
    display: inline-block;
    padding: 1.5em;
    vertical-align: middle;
    width: 48%; }
    .feature .content h3 {
      margin-bottom: 0.5em; }
    .feature .content :last-child {
      margin: 0; }
  .feature.left {
    text-align: left; }
    .feature.left .image {
      float: left; }
      .feature.left .image img {
        right: 0;
        top: 0; }
    .feature.left .content {
      padding-right: 0; }
  .feature.right {
    text-align: right; }
    .feature.right .image {
      float: right; }
      .feature.right .image img {
        left: 0;
        top: 0; }
    .feature.right .content {
      padding-left: 0; }
  .feature.long .content {
    padding-top: 0; }

/* List */
ol {
  list-style: decimal;
  margin: 0 0 2em 0;
  padding-left: 1.25em; }
  ol li {
    padding-left: 0.25em; }

ul {
  list-style: disc;
  margin: 0 0 2em 0;
  padding-left: 1em; }
  ul li {
    padding-left: 0.5em; }
  ul.alt {
    list-style: none;
    padding-left: 0; }
    ul.alt li {
      border-top: solid 1px #e5e5e5;
      padding: 0.5em 0; }
      ul.alt li:first-child {
        border-top: 0;
        padding-top: 0; }
  ul.icons {
    cursor: default;
    list-style: none;
    padding-left: 0; }
    ul.icons li {
      display: inline-block;
      padding: 0 1.25em 0 0; }
      ul.icons li:last-child {
        padding-right: 0; }
      ul.icons li .icon {
        color: inherit; }
        ul.icons li .icon:before {
          font-size: 1.75em; }
  ul.actions {
    cursor: default;
    list-style: none;
    padding-left: 0; }
    ul.actions li {
      display: inline-block;
      padding: 0 1em 0 0;
      vertical-align: middle; }
      ul.actions li:last-child {
        padding-right: 0; }
    ul.actions.small li {
      padding: 0 0.5em 0 0; }
    ul.actions.vertical li {
      display: block;
      padding: 1em 0 0 0; }
      ul.actions.vertical li:first-child {
        padding-top: 0; }
      ul.actions.vertical li > * {
        margin-bottom: 0; }
/* ... */

